--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+NYT_API_KEY=dfgFK7XlPlkPf4Z9xkPnleRj11AzdOno
 APP_ENV=dev
 APP_SECRET=71b982b9e7e6e2f688bbaf43b542fc11
 ###< symfony/framework-bundle ###
@@ -39,3 +40,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
