--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "google/cloud-text-to-speech": "^2.0",
+        "guzzlehttp/guzzle": "^7.9",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
         "symfony/asset": "6.4.*",
