--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,14 +6,14 @@
 parameters:
     files_directory: '%kernel.project_dir%/public/uploads/files'
     cover_images_directory: '%kernel.project_dir%/public/uploads/images'
-services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    # Make sure you have defined this in your .env file
+    nyt_api_key: '%env(NYT_API_KEY)%'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+services:
+    _defaults:
+        autowire: true
+        autoconfigure: true
+
     App\:
         resource: '../src/'
         exclude:
@@ -21,5 +21,6 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Service\NYTReviewService:
+        arguments:
+            $apiKey: '%env(NYT_API_KEY)%'
