Initial commit of Symfony project

--- a/.env
+++ b/.env
@@ -39,5 +39,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+MAILER_DSN=smtp://mannaiabir32@gmail.com:niduuoflnhdfvgmn@smtp.gmail.com:587?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+#nidu uofl nhdf vgmn
