--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,15 @@ controllers:
 app_logout:
     path: /logout
     methods: [POST]
+# config/routes.yaml
+app_forgot_password_request:
+    path: /reset-password
+    controller: App\Controller\ResetPasswordController::request
+
+app_check_email:
+    path: /check-email
+    controller: App\Controller\ResetPasswordController::checkEmail
+
+app_reset_password:
+    path: /reset-password/{token}
+    controller: App\Controller\ResetPasswordController::reset
